force-app/main/default/objects/Log_Setting__c/Log_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Log Setting</label>
</CustomObject>