force-app/main/default/objects/Log_Setting__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When unchecked, no logs will be published regardless of the Level</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>