force-app/main/default/objects/Log_Setting__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <defaultValue>&quot;NONE&quot;</defaultValue>
    <description>Possible values correspond with the standard LoggingLevel Enum:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_enum_System_LoggingLevel.htm
Unfortunately, picklists are not available for Custom Settings</description>
    <inlineHelpText>Possible values:
NONE: No logging.
ERROR: Error and exception logging.
WARN: Warning logging.
INFO: Informational logging.
DEBUG: User-specified debug logging.
FINE: High level of logging.
FINER: Higher level of logging than FINE.
FINEST: Highest level of logging.</inlineHelpText>
    <label>Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>