force-app/main/default/objects/Log_Setting__c/fields/Max_Publish_Calls__c.field-meta.xml
<CustomField>
    <fullName>Max_Publish_Calls__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Dictates the number of times logs can be published (via Logger.publish() or Logger.logAndPublish()) in a single transaction. Lower this number if you run into PublishImmediateDml Limits. 

Maximum is 150, 100 is recommended for most organizations. 

Note: Only the Organizational Defaults record will be referenced. Do not refer to this value on individual Settings records.</description>
    <inlineHelpText>Maximum is 150, 100 is recommended for most organizations. 

Note: Only the Organizational Defaults record will be referenced. Do not refer to this value on individual Settings records.</inlineHelpText>
    <label>Max Publish Calls</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>