force-app/main/default/objects/Log_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Enabled__c</columns>
    <columns>Level__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>