force-app/main/default/objects/Log_Setting__c/listViews/All_Log_Settings.listView-meta.xml
<ListView>
    <fullName>All_Log_Settings</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Level__c</columns>
    <columns>Enabled__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Log Settings</label>
</ListView>